--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -7,8 +7,8 @@
     <span class="menu-spacer"></span>
 
     <!-- wahtsapp button will visible if isFreeTrialSubscription == 0 && country == india -->
-    <ng-container *ngIf="(isWhatsappIconDisplay === '+91') && (isBookNow === 0)">
-      <a href="https://api.whatsapp.com/send?phone=+918512060007" target="_blank" [ngClass]="isMobile ? 'p-1' : '' ">
+    <ng-container *ngIf="isWhatsappIconDisplay === '+91' && isBookNow === 0">
+      <a href="https://api.whatsapp.com/send?phone=+918512060007" target="_blank" [ngClass]="isMobile ? 'p-1' : ''">
         <div class="whatsapp-div-header">
           <div>
             <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon" />
@@ -20,12 +20,10 @@
 
     <!-- book now button visible if isFreeTrialSubscription flag is 1 for all countries -->
     <ng-container *ngIf="isBookNow === 1">
-      <a mat-raised-button href="https://calendly.com/mm_support/discovery_call" target="_blank"
-        class="main-color main-button pull-left">Book a Demo</a>
+      <a mat-raised-button (click)="openCallendly()" class="main-color main-button pull-left">Book a Demo</a>
     </ng-container>
 
-    <button class="pull-right p-t-10 notification-bell-icon" [ngClass]="isMobile ? 'p-1' : '' " mat-button
-      [matMenuTriggerFor]="notifs">
+    <button class="pull-right p-t-10 notification-bell-icon" [ngClass]="isMobile ? 'p-1' : ''" mat-button [matMenuTriggerFor]="notifs">
       <a href="javascript:void(0)" (click)="openDiv()">
         <mat-icon
           [ngClass]="{'bell-icon-active': notifClicked === true, 'bell-icon': notifClicked === false}"
