--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -4,11 +4,7 @@
       <div class="row p-t-10 p-b-10">
         <div class="col-sm-12">
           <span>
-            <button
-              mat-raised-button
-              class="main-background-color main-button color-white pull-right"
-              [disabled]="getFormValidation() ? (getFormQtyValidation() ? true : false) : true"
-            >
+            <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="getFormValidation() ? (getFormQtyValidation() ? true : false) : true">
               Create P.O
             </button>
           </span>
@@ -61,9 +57,8 @@
 
                 <ng-container formArrayName="materialList">
                   <div class="p-0" *ngFor="let material of project.materialList; let m = index" [formGroupName]="m">
-
                     <tr class="mat-row material-details-row">
-                      <td class="mat-cell maxwidth-20" matTooltip=" {{ material.materialName }}">{{ material.materialName }}</td>    
+                      <td class="mat-cell maxwidth-20" matTooltip=" {{ material.materialName }}">{{ material.materialName }}</td>
 
                       <td class="mat-cell maxwidth-10">
                         {{ material.rfqMaterialQty }}
@@ -77,7 +72,8 @@
                         <tr class="mat-row makes-details-row makes-header-row">
                           <ng-container *ngFor="let brand of material.brandNames">
                             <td class="mat-cell maxwidth-8 text-center">{{ brand }}</td>
-                            <td class="mat-cell maxwidth-17 text-center supplier-rate-col-bid">Rate
+                            <td class="mat-cell maxwidth-17 text-center supplier-rate-col-bid">
+                              Rate
                               <span *ngIf="rfqProjects[0].rfqCurrency" class="p-r-5">({{ currency }})</span>
                             </td>
                           </ng-container>
@@ -124,8 +120,7 @@
                                 <td class="mat-cell maxwidth-8 text-center" style="overflow: initial">
                                   <ng-container *ngIf="brandInfo.materialUnitPrice !== null && brandInfo.materialUnitPrice !== 0; else dashedLine">
                                     <mat-form-field class="border-input width-100">
-                                      <input type="text" class="quantity" appTwoDigitDecimaNumber matInput 
-                                      formControlName="quantity" placeholder="qty" min="0" (input)="getQuanityValidation(p, m)" />
+                                      <input type="text" class="quantity" appTwoDigitDecimaNumber matInput formControlName="quantity" placeholder="qty" min="0" (input)="getQuanityValidation(p, m)" />
                                     </mat-form-field>
                                   </ng-container>
 
@@ -146,10 +141,9 @@
                               </ng-container>
                             </ng-container>
                           </tr>
-                        </td>                        
+                        </td>
                       </tr>
                     </ng-container>
-
                   </div>
                 </ng-container>
               </mat-expansion-panel>
