--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -62,11 +62,12 @@
                   <tr class="mat-row" *ngFor="let indent of indentList">
                     <td class="mat-cell"></td>
                     <td class="mat-cell"></td>
-                    <td class="mat-cell text-center"></td>
+                    <td class="mat-cell"></td>
                     <td class="mat-cell text-center">{{ indent.intendedQnt }}</td>
                     <td class="mat-cell text-center">{{ indent.dueDate | date: "dd MMM yyy" }}</td>
+                    <td class="mat-cell"></td>
                     <td class="mat-cell text-center">{{ indent.issuedQnt }}</td>
-                    <td class="mat-cell text-center"></td>
+                    <td class="mat-cell"></td>
                   </tr>
                 </div>
               </ng-container>
