--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -1,47 +1,37 @@
 <div class="page-start-point">
+  <!-- supplier details header -->
   <ng-container *ngIf="dataSourceTemp == null || dataSourceTemp == [] || dataSourceTemp.length == 0">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
+
       <div class="add-user-img suppliers">
         <img src="../../../../assets/images/supplier-background.png" alt="BuildSupply_Logo" />
-        <div>
-          <p>
-            You haven't added any supplier yet. <br />
-            Please add one to continue.
-          </p>
-        </div>
+        <p>You haven't added any supplier yet. <br /> Please add one to continue.</p>
         <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">Add First Supplier</button>
         <br />
-        <p>
-          <br />
-          Or
-        </p>
+        <p><br />Or</p>
+
         <div class="d-flex justify-content-center" appDnd>
           <div class="mr-3 p-t-10">
             <span class="cursor-pointer">
               <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2 cursor-pointer w-45" />
-              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span
-            >
+              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a>
+            </span>
           </div>
+
           <div class="mr-3 p-t-10 cursor-pointer">
-            <input
-              type="file"
-              accept=".xlsx"
-              #fileDropRef
-              id="fileDropRef"
-              class="fileupload cursor-pointer"
-              style="display: none"
-              multiple
-              (change)="uploadExcel($event.target.files)"
-            />
+            <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer" style="display: none"
+              multiple (change)="uploadExcel($event.target.files)"/>
             <label for="fileDropRef" class="cursor-pointer upload-template" style="color: #000015e6">
-              <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" /> Upload Supplier Template</label
-            >
+              <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" /> 
+              Upload Supplier Template
+            </label>
           </div>
         </div>
       </div>
     </div>
   </ng-container>
 
+  <!-- supplier details table -->
   <ng-container *ngIf="dataSourceTemp && dataSourceTemp.length > 0">
     <div class="dashboard-unique p-b-20 min-height parent supplier-screen">
 
@@ -59,38 +49,21 @@
             <div class="text-right d-flex justify-content-end align-items-center" appDnd>
               <div class="mr-3 cursor-pointer">
                 <span class="cursor-pointer">
-                  <img
-                    *ngIf="!showResponsiveDesignIcons"
-                    src="assets/images/download-bom.svg"
-                    alt="download"
-                    class="img-fluid mr-2 cursor-pointer width-18"
-                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"
-                  />
-                  <img
-                    *ngIf="showResponsiveDesignIcons"
-                    src="assets/images/excel-download-res.svg"
-                    alt="download"
-                    class="img-fluid mr-2 cursor-pointer width-100 mobile-icons"
-                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"
-                  />
+                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/download-bom.svg" alt="download"
+                    class="img-fluid mr-2 cursor-pointer width-18" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"/>
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/excel-download-res.svg" alt="download"
+                    class="img-fluid mr-2 cursor-pointer width-100 mobile-icons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"/>
 
                   <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
                     Download Supplier Template
-                  </a></span
-                >
+                  </a>
+                </span>
               </div>
 
               <div class="mr-3 cursor-pointer">
-                <input
-                  type="file"
-                  accept=".xlsx"
-                  #fileDropRef
-                  id="fileDropRef"
-                  class="fileupload cursor-pointer"
-                  style="display: none"
-                  multiple
-                  (change)="uploadExcel($event.target.files)"
-                />
+                <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+                  style="display: none" multiple (change)="uploadExcel($event.target.files)" />
+
                 <label for="fileDropRef" class="cursor-pointer upload-template">
                   <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 width-18 cursor-pointer" />
                   <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 width-100 mobile-icons cursor-pointer" />
@@ -107,49 +80,58 @@
       </div>
 
       <!-- all suppliers data table structure -->
-      <div class="supplier-details-table-div add-unique-container mat-elevation-z8" *ngIf="dataSourceTemp && dataSourceTemp.length > 0">
-        <table mat-table [dataSource]="dataSource" class="supplier-data-tbl">
-
-          <!-- Supplier name Column -->
-          <ng-container matColumnDef="suppliername">
-            <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
-            <td mat-cell *matCellDef="let element" class="p-rem-r-5">
-              <span class="supplier-name">{{ element.supplierName }}</span>
-              <span class="d-block supplier-rates">
-                <view-rating [supplierId]="element.supplierId" [ratings]="element.supplierRating"></view-rating>
-              </span>
-            </td>
-          </ng-container>
-
-          <!-- Supplier email Column -->
-          <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef>Email</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.email }}
-            </td>
-          </ng-container>
-
-          <!-- Contact number Column -->
-          <ng-container matColumnDef="contactNo">
-            <th mat-header-cell *matHeaderCellDef>Contact No.</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.contactNo }}
-            </td>
-          </ng-container>
-
-          <!-- Status Column -->
-          <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let element">
-              <ng-container *ngIf="element.status == 0"> Active </ng-container>
-              <ng-container *ngIf="element.status == 1"> Inactive </ng-container>
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
+      <ng-container *ngIf="dataSourceTemp && dataSourceTemp.length > 0">
+        <div class="supplier-details-table-div add-unique-container mat-elevation-z8" *ngIf="!noSearchResults">
+          <table mat-table [dataSource]="dataSource" class="supplier-data-tbl">
+  
+            <!-- Supplier name Column -->
+            <ng-container matColumnDef="suppliername">
+              <th mat-header-cell *matHeaderCellDef>Supplier Name</th>
+              <td mat-cell *matCellDef="let element" class="p-rem-r-5">
+                <span class="supplier-name">{{ element.supplierName }}</span>
+                <span class="d-block supplier-rates">
+                  <view-rating [supplierId]="element.supplierId" [ratings]="element.supplierRating"></view-rating>
+                </span>
+              </td>
+            </ng-container>
+  
+            <!-- Supplier email Column -->
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef>Email</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.email }}
+              </td>
+            </ng-container>
+  
+            <!-- Contact number Column -->
+            <ng-container matColumnDef="contactNo">
+              <th mat-header-cell *matHeaderCellDef>Contact No.</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.contactNo }}
+              </td>
+            </ng-container>
+  
+            <!-- Status Column -->
+            <ng-container matColumnDef="status">
+              <th mat-header-cell *matHeaderCellDef>Status</th>
+              <td mat-cell *matCellDef="let element">
+                <ng-container *ngIf="element.status == 0"> Active </ng-container>
+                <ng-container *ngIf="element.status == 1"> Inactive </ng-container>
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </div>
+      </ng-container>
+      
+      <div class="no-suppliers" *ngIf="noSearchResults">
+        <img src="../../../../assets/images/supplier-background.png" alt="BuildSupply_Logo" />
+        <p>No search results found</p>
       </div>
+      
+
     </div>
   </ng-container>
 </div>
