--- a/src/app/features/subscription-redirections/subscription-redirections.component.html
+++ b/src/app/features/subscription-redirections/subscription-redirections.component.html
@@ -1,9 +1,9 @@
 <app-top-header></app-top-header>
 
-<div class="container p-rem-t-30 p-b-5 redirections">
+<div class="container p-t-30 p-b-5 redirections">
   <div class="row">
     <div class="col-md-8 col-md-offset-2 justify-content-center text-center">
-      <mat-card class="p-rem-t-15 p-rem-t-15">
+      <mat-card class="p-t-15 p-t-15">
         <ng-container *ngIf="pageType === 0">
           <mat-card-content>
             <img src="../../../assets/images/subs-thanks.png" alt="" />
@@ -13,7 +13,7 @@
               for Choosing <ng-container *ngIf="planName">{{ planName }}</ng-container> Plan
             </h2>
 
-            <div class="shadow-tag p-rem-l-30 p-rem-r-30 p-rem-r-5 p-rem-r-5">
+            <div class="shadow-tag p-l-30 p-r-30 p-r-5 p-r-5">
               <ng-container *ngIf="userCount">{{ userCount }}</ng-container> Users
             </div>
 
@@ -47,7 +47,7 @@
             <img src="../../../assets/images/subs-unsubscribe.png" alt="" />
             <h2 class="mt-4 mb-4" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px'">Payment Failed</h2>
 
-            <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-t-1-rem p-b-1-rem" [ngClass]="isMobile ? 'w-100' : 'w-75'">
+            <div class="shadow-tag p-t-15 p-t-15 p-t-1 p-b-1" [ngClass]="isMobile ? 'w-100' : 'w-75'">
               Sorry, your payment of <ng-container *ngIf="currencyCode">{{ currencyCode }} </ng-container>
               <ng-container *ngIf="amount">{{ amount }}</ng-container> had failed.
               <span class="d-block mt-2 mb-2"></span>
@@ -56,7 +56,7 @@
             </div>
 
             <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-              <button mat-button class="brand-bg-color p-rem-l-30 p-rem-r-30"
+              <button mat-button class="brand-bg-color p-l-30 p-r-30"
                 [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'" (click)="gotoMySubscriptions()">
                 Update Details
               </button>
@@ -72,7 +72,7 @@
 
             <p class="mt-2 fontsize-20-px">We don't want to see you go</p>
 
-            <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-rem-r-5 p-rem-r-5">We promise security of your data until
+            <div class="shadow-tag p-t-15 p-t-15 p-r-5 p-r-5">We promise security of your data until
               next payment</div>
 
             <div class="mt-4">
@@ -88,15 +88,14 @@
             <h2 class="mt-4 mb-2" [ngClass]="isMobile ? 'font-size30' : 'font-size-40px'">Your free trial has ended!
             </h2>
 
-            <div class="shadow-tag p-rem-t-15 p-rem-t-15 p-rem-t-15 p-rem-t-15"
-              [ngClass]="!isMobile ? 'mlr-140px' : ''">
+            <div class="shadow-tag p-l-15 p-r-15 p-t-15 p-b-15" [ngClass]="!isMobile ? 'mlr-140px' : ''">
               We hope you enjoyed your free trial on Material Manager. All of your data and information is safe with us.
               To continue using the platform, please choose a plan that's right for your business and power your
               construction procurement like never before.
             </div>
 
             <div [ngClass]="isMobile ? 'mt-4' : 'mt-5'">
-              <button mat-button class="brand-bg-color p-rem-l-30 p-rem-r-30"
+              <button mat-button class="brand-bg-color p-l-30 p-r-30"
                 [ngClass]="isMobile ? 'fontsize-20-px' : 'font-size-26px'" (click)="gotoSubscriptions()">
                 Choose Plan
               </button>
@@ -105,7 +104,7 @@
         </ng-container>
 
         <ng-container *ngIf="pageType !== 3">
-          <div class="p-t-0 p-rem-r-5 text-center">
+          <div class="p-t-0 p-r-5 text-center">
             <button mat-button class="brand-color" routerLink="/dashboard">Back to Dashboard</button>
           </div>
         </ng-container>
