--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -391,7 +391,7 @@ div.limited-character.universal {
     display: none;
     margin-top: 10px;
     position: absolute;
-    left: 10px;
+    // left: 10px;
   }
 }
 
@@ -446,7 +446,7 @@ div.limited-character.universal {
   padding: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   margin-top: 10px;
-  margin-left: -62%;
+  margin-left: -90%;
   z-index: 9;
   position: relative;
   text-align: left;
