--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -89,7 +89,7 @@
   background: #c7c7c7;
 
   div {
-    display: flex;
+    // display: flex;
     color: #343434;
   }
 
@@ -571,7 +571,7 @@ mat-icon {
   font-size: 18px;
   font-weight: 500;
   font-size: 18px;
-  padding: 10px;
+  padding: 0 10px 10px;
   border-bottom: 1px solid #ebe3f5;
 }
 
