--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -20,10 +20,10 @@
 
     <!-- book now button visible if isFreeTrialSubscription flag is 1 for all countries -->
     <ng-container *ngIf="isBookNow === 1">
-      <a mat-raised-button (click)="openCallendly()" class="main-color main-button pull-left">Book a Demo</a>
+      <a mat-raised-button href="https://calendly.com/mm_support/discovery_call" target="_blank" class="main-color main-button pull-left">Book a Demo</a>
     </ng-container>
 
-    <button class="pull-right p-t-10 notification-bell-icon" [ngClass]="isMobile ? 'p-1' : ''" mat-button [matMenuTriggerFor]="notifs">
+    <button class="p-t-10 notification-bell-icon" [ngClass]="isMobile ? 'p-1' : ''" mat-button [matMenuTriggerFor]="notifs">
       <a href="javascript:void(0)" (click)="openDiv()">
         <mat-icon
           [ngClass]="{'bell-icon-active': notifClicked === true, 'bell-icon': notifClicked === false}"
@@ -64,7 +64,7 @@
   </ng-container>
 </ng-container>
 
-<mat-menu #notifs="matMenu" class="header-bell-menu">
+<mat-menu #notifs="matMenu" xPosition="before" class="header-bell-menu">
   <div class="main-div-bell" mat-menu-item [disableRipple]="true">
     <div id="notifications">
       <h3>Notifications</h3>
