--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -165,6 +165,11 @@ div.limited-character.universal {
 .full-border.mat-form-field input {
   border: 2px solid $icon-color-gray;
 }
+
+.gray-border {
+  border: 1px solid $background-color-grey;
+}
+
 .no-border {
   border: 0 !important;
 }
@@ -188,9 +193,9 @@ div.limited-character.universal {
   }
 }
 
-.mat-form-field-infix-padding {
-  .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix {
-    padding-bottom: 0px !important ;
+.mat-form-field-wrapper-nopadding {
+  .mat-form-field-wrapper {
+    padding-top: 0px !important ;
   }
 }
 
@@ -259,6 +264,90 @@ div.limited-character.universal {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
   padding: 1rem;
+}
+
+/***************************************************************************************/
+
+/*********************************************Slider *************************************/
+.custom-slider {
+  .mat-slider.mat-slider-horizontal .mat-slider-track-wrapper {
+    height: 12px;
+    border-radius: 10px;
+  }
+  .mat-slider.mat-slider-horizontal .mat-slider-track-background,
+  .mat-slider.mat-slider-horizontal .mat-slider-track-fill {
+    height: 100%;
+  }
+  .mat-slider.mat-slider-horizontal .mat-slider-track-fill,
+  .mat-slider.mat-slider-horizontal .mat-slider-track-background {
+    background-color: $skyblue-color;
+  }
+
+  .mat-slider-thumb-label {
+    background-color: $main-color !important;
+    color: $white-color;
+  }
+
+  .mat-slider-thumb-label-text {
+    color: $white-color;
+  }
+
+  .mat-accent .mat-slider-thumb {
+    height: 30px;
+    width: 30px;
+    background-color: white;
+    border: solid 2px gray;
+    bottom: -20px;
+    right: -20px;
+  }
+}
+/***************************************************************************************/
+
+/**************************************Bell Notification*************************************/
+.header-bell-menu {
+  transform-origin: right top !important;
+}
+
+.header-bell-menu .main-div-bell.mat-menu-item {
+  width: 100%;
+  height: auto;
+  max-height: 319px;
+  overflow-y: scroll;
+  padding-left: 1px;
+  padding-right: 0px;
+  white-space: pre-line;
+  line-height: 15px;
+}
+
+.header-bell-menu.mat-menu-panel {
+  min-width: 100% !important;
+}
+.header-bell-menu.mat-menu-item {
+  height: auto;
+}
+.header-bell-menu {
+  .mat-menu-content {
+    padding: 0px !important;
+  }
+}
+
+#notifications {
+  display: block;
+  background-color: #ffffff;
+  color: #000000;
+  z-index: 999;
+  font-size: 10px;
+  width: 100%;
+  &:before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    color: transparent;
+    border: 10px solid #ccc;
+    border-color: transparent transparent #fff;
+    margin-top: -11px;
+  }
 }
 
 /***************************************************************************************/
