bom image issue and supplier details - search input clear issue resolved

--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -155,18 +155,15 @@
             [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
           >
             <!-- View image modal link -->
-            <div
-              *ngIf="element?.documentsList?.length"
-              class="images-lists"
+            <div *ngIf="element?.documentsList?.length" class="images-lists"
               [ngClass]="element.documentsList.length === 1 ? 'single-image' : element.documentsList.length === 2 ? 'double-images' : 'triple-images'"
-              (click)="viewAllImages(element.projectId, element.materialId)"
-            >
+              (click)="viewAllImages(element.projectId, element.materialId)">
               <ng-container *ngFor="let img of element.documentsList; let i = index">
                 <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
               </ng-container>
             </div>
 
-            <ng-container *ngIf="!element?.documentsList">
+            <ng-container *ngIf="element?.documentsList?.length === 0">
               <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
             </ng-container>
           </td>
