--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -46,7 +46,7 @@
             <ng-container matColumnDef="Delivered Date">
               <th mat-header-cell *matHeaderCellDef class="text-align-center receipt-delivered-date">Delivered <br />Date</th>
               <td mat-cell *matCellDef="let element; let i = index" class="text-align-center receipt-delivered-date">
-                <mat-form-field class="border-input" [formGroupName]="i">
+                <mat-form-field class="border-input width-75" [formGroupName]="i">
                   <input matInput [matDatepicker]="dueDate" formControlName="deliveredDate" (click)="dueDate.open()" />
                   <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                   <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
