--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -138,6 +138,7 @@
                   <div class="col-xs-6 color-grey text-semi-bold p-r-0 fontsize-15-px">Base Currency</div>
                   <div class="col-xs-6 p-l-0">
                     <mat-form-field class="width-90 border-select mat-form-field-infix-padding dropdown-padding mat-form-field-flex-mm-padding">
+                      <mat-label>Search Currency</mat-label>
                       <mat-select formControlName="baseCurrency">
                         <div class="display-flex">
                           <input
