--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -112,7 +112,7 @@
                 </th>
                 <td mat-cell *matCellDef="let element; let i = index">
                   <mat-form-field [ngClass]="isMobile ? 'p-r-10' : ''" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
-                    <input matInput formControlName="estimatedRate" type="text" appTwoDigitDecimaNumber placeholder="Estimated Rate" min="0" />
+                    <input #rate matInput formControlName="estimatedRate" type="text" appTwoDigitDecimaNumber placeholder="Estimated Rate" min="0" />
                     <small
                       *ngIf="
                         materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError('pattern') &&
