--- a/src/app/features/user-feedback/user-feedback.component.html
+++ b/src/app/features/user-feedback/user-feedback.component.html
@@ -1,4 +1,4 @@
-<section class="update-info height-86 flex-center email-verification" style="background-image: none">
+<section class="update-info height-86 flex-center email-verification p-t-0" style="background-image: none">
   <div class="container text-webkit-center">
     <div class="row background-white-color border-radius-10 p-20 mt-5 width-60">
       <div class="col-md-12 text-center">
