--- a/src/app/shared/dialogs/add-address/add-address.component.html
+++ b/src/app/shared/dialogs/add-address/add-address.component.html
@@ -77,8 +77,9 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-xs-6 p-t-6">
-                    <mat-form-field class="border-select address-select-country mat-form-field-infix-padding-top mat-form-field-flex-mm-padding mt6p width-100">
+                  <div class="col-xs-6">
+                    <mat-form-field class="border-select address-select-country mat-form-field-flex-mm-padding mt6p width-100">
+                      <mat-label class="value-currencies-label">Select Country</mat-label>
                       <mat-select formControlName="countryCode" (selectionChange)="blankPincode()">
                         <div class="display-flex">
                           <input
