--- a/src/app/features/dashboard/bom/bom-common-table/bom-common-table.component.html
+++ b/src/app/features/dashboard/bom/bom-common-table/bom-common-table.component.html
@@ -75,16 +75,16 @@
                                         <mat-form-field
                                             class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
                                             <mat-label>Estimated Quantity</mat-label>
-                                            <input matInput type="number" formControlName="estimatedQty"
-                                                [value]="item.estimatedQty" autocomplete="off">
+                                            <input matInput type="text" formControlName="estimatedQty"
+                                                [value]="item.estimatedQty" autocomplete="off" appTwoDigitDecimaNumber>
                                         </mat-form-field>
                                     </td>
                                     <td>
                                         <mat-form-field
                                             class="border-input widthZero mat-form-field-padding bom-same-width-col p-t-10">
                                             <mat-label>Estimated Rate</mat-label>
-                                            <input matInput type="number" formControlName="estimatedRate"
-                                                [value]="item.estimatedRate" autocomplete="off">
+                                            <input matInput type="text" formControlName="estimatedRate"
+                                                [value]="item.estimatedRate" autocomplete="off" appTwoDigitDecimaNumber>
                                         </mat-form-field>
                                     </td>
 
