--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -1,6 +1,7 @@
 <div class="page-start-point p-rem-t-40">
   <div class="p-l-10 p-r-10 p-b-10 bom-table-style">
-    <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
+    <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2">
+    </card-layout>
 
     <div class="row align-items-center justify-content-between bom-above-tbl-section">
       <div class="col-md-3 col-sm-6 col-xs-12 col-search-input">
@@ -14,22 +15,15 @@
 
       <div class="col-md-9 col-sm-6 col-xs-12 col-bom-actions" [ngClass]="!isMobile ? 'text-right' : ''">
         <div class="bom-detail-action-buttons">
-          <button
-            mat-raised-button
-            class="main-background-color main-button color-white create-rfp mr-2"
-            (click)="createRfq()"
-            *ngIf="permissionObj.rfqFlag"
-            [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'"
-          >
+          <button mat-raised-button class="main-background-color main-button color-white create-rfp mr-2"
+            (click)="createRfq()" *ngIf="permissionObj.rfqFlag"
+            [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
             Create RFP
           </button>
 
-          <button
-            mat-raised-button
-            class="main-background-color main-button color-white raise-pr mr-2"
+          <button mat-raised-button class="main-background-color main-button color-white raise-pr mr-2"
             (click)="raiseIndent()"
-            [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'"
-          >
+            [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
             Raise PR
           </button>
 
@@ -54,14 +48,12 @@
       <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows class="col-sm-12 bom-material-table">
         <ng-container matColumnDef="materialName">
           <th mat-header-cell *matHeaderCellDef class="first-column-row-header" mat-sort-header>Material Name</th>
-          <td mat-cell class="text-left" *matCellDef="let element" [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-            <mat-checkbox
-              #ch
-              (change)="getElemenetChecked(ch, element)"
-              [checked]="element.checked"
-              [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
-            >
-              <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
+          <td mat-cell class="text-left" *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+            <mat-checkbox #ch (change)="getElemenetChecked(ch, element)" [checked]="element.checked"
+              [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false">
+              <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }}
+                <br /></div>
               <div class="limited-character bom" matTooltip=" {{ element.materialGroup }}">
                 <span class="category-name">
                   {{ element.materialGroup }}
@@ -73,74 +65,56 @@
 
         <ng-container matColumnDef="materialUnit">
           <th *matHeaderCellDef class="text-align-center justify-center" mat-header-cell mat-sort-header>Unit</th>
-          <td
-            class="text-align-center"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
+          <td class="text-align-center" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
             {{ element.materialUnit }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="estimatedQty">
-          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell mat-sort-header>Estimated Quantity</th>
-          <td
-            class="text-align-center"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
+          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell
+            mat-sort-header>Estimated Quantity</th>
+          <td class="text-align-center" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
             {{ element.estimatedQty }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="estimatedRate">
-          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell mat-sort-header>Estimated Rate</th>
-          <td
-            class="text-align-center"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
+          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell
+            mat-sort-header>Estimated Rate</th>
+          <td class="text-align-center" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
             {{ element.estimatedRate }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="requestedQuantity">
-          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell mat-sort-header>Requested Quantity</th>
-          <td
-            class="text-align-center"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
+          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell
+            mat-sort-header>Requested Quantity</th>
+          <td class="text-align-center" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
             {{ element.requestedQuantity }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="issueToProject">
-          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell mat-sort-header>Issued To Project</th>
-          <td
-            class="text-align-center"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
-            <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }} </ng-container>
+          <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px" mat-header-cell
+            mat-sort-header>Issued To Project</th>
+          <td class="text-align-center" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+            <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }}
+            </ng-container>
             <ng-template #showZEroDataIP> 0 </ng-template>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="availableStock">
-          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag" class="text-align-center justify-center minwidth-110-px" mat-header-cell mat-sort-header>Available In Stock</th>
-          <td
-            class="text-align-center"
-            mat-cell
-            [hidden]="!permissionObj.rfqFlag"
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
+          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag"
+            class="text-align-center justify-center minwidth-110-px" mat-header-cell mat-sort-header>Available In Stock
+          </th>
+          <td class="text-align-center" mat-cell [hidden]="!permissionObj.rfqFlag" *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
             <ng-container *ngIf="element.availableStock; else showZEroData"> {{ element.availableStock }}</ng-container>
             <ng-template #showZEroData> 0 </ng-template>
           </td>
@@ -148,42 +122,35 @@
 
         <ng-container matColumnDef="attachedImages">
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">Attached Images</th>
-          <td
-            class="text-align-center bom-attached-images-col"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
+          <td class="text-align-center bom-attached-images-col" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
             <!-- View image modal link -->
-            <div
-              *ngIf="element?.documentsList?.length"
-              class="images-lists"
+            <div *ngIf="element?.documentsList?.length" class="images-lists"
               [ngClass]="element.documentsList.length === 1 ? 'single-image' : element.documentsList.length === 2 ? 'double-images' : 'triple-images'"
-              (click)="viewAllImages(element.projectId, element.materialId)"
-            >
+              (click)="viewAllImages(element.projectId, element.materialId)">
               <ng-container *ngFor="let img of element.documentsList; let i = index">
-                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
+                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image"
+                  *ngIf="i < 3" />
               </ng-container>
             </div>
 
             <ng-container *ngIf="!element?.documentsList">
-              <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+              <img src="assets/images/project-default-image.png" alt="default-material"
+                class="img-fluid default-image" />
             </ng-container>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="customColumn">
           <th *matHeaderCellDef></th>
-          <td
-            class="text-right p-b-20"
-            mat-cell
-            *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-          >
-            <span *ngIf="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false" class="p-r-20 p-t-10 display-inline-block color-grey">Pending</span>
+          <td class="text-right p-b-20" mat-cell *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+            <span *ngIf="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
+              class="p-r-20 p-t-10 display-inline-block color-grey">Pending</span>
 
             <!-- Upload Image Link -->
-            <a class="p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image" (click)="uploadImage(element)">
+            <a class="p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image"
+              (click)="uploadImage(element)">
               <img class="width-20-px mt-1 mr-2" src="assets/images/upload-image-icon.svg" />
             </a>
 
@@ -191,28 +158,22 @@
               <img (click)="openIssueTOIndent(element)" [src]="indentButtonColor(element)" />
             </a>
 
-            <a
-              class="width-15-px p-l-5 cursor-pointer"
-              matTooltip="Delete"
-              (click)="
+            <a class="width-15-px p-l-5 cursor-pointer" matTooltip="Delete" (click)="
                 element.requestedQuantity == 0 &&
                 (element.availableStock == 0 || element.availableStock == null) &&
                 element.issueToProject == 0 &&
                 (element.materialCustomFlag ? (element.isApproved == 1 ? true : false) : true)
                   ? deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)
                   : null
-              "
-            >
-              <img
-                [src]="
+              ">
+              <img [src]="
                   element.requestedQuantity === 0 &&
                   (element.availableStock === 0 || element.availableStock === null) &&
                   element.issueToProject === 0 &&
                   (element.materialCustomFlag ? (element.isApproved == 1 ? true : false) : true)
                     ? '../../../../assets/images/delete-button.png'
                     : '../../../../assets/images/delete-button-disable.png'
-                "
-              />
+                " />
             </a>
 
             <!-- <a
@@ -242,7 +203,8 @@
 
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail" *ngIf="element.materialSpecs" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-detail" *ngIf="element.materialSpecs"
+              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
               <div class="inner-table mat-elevation-z8 row" *ngIf="expandedElement">
                 <table class="col-sm-12" mat-table [dataSource]="element.materialSpecs">
                   <ng-container matColumnDef="materialName">
@@ -267,7 +229,8 @@
                   </ng-container>
                   <ng-container matColumnDef="Requested Quantity">
                     <th *matHeaderCellDef class="text-align-center">Requested Material</th>
-                    <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}</td>
+                    <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}
+                    </td>
                   </ng-container>
                   <ng-container matColumnDef="issueToProject">
                     <th *matHeaderCellDef class="text-align-center">Issued To Project</th>
