--- a/src/app/shared/components/adv-search-item/adv-search-item.component.html
+++ b/src/app/shared/components/adv-search-item/adv-search-item.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="config?.list">
+<div *ngIf="config?.list" class="adv-sarch-item">
   <!-- <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -7,21 +7,12 @@
         </mat-expansion-panel-header> -->
 
   <form *ngIf="form" [formGroup]="form">
-    <mat-form-field class="d-block border-bottom-dark drp-inpt">
+    <mat-form-field class="d-block border-bottom drp-inpt">
       <mat-label>{{ config.title }}</mat-label>
       <mat-select formControlName="selected" multiple (openedChange)="projectInput.focus()">
         <div class="d-flex">
-          <input
-            formControlName="searchInput"
-            class="p-rem-l-10"
-            #projectInput
-            matInput
-            focused="'true'"
-            type="text"
-            autocomplete="off"
-            placeholder="search"
-            (keydown)="$event.stopPropagation()"
-          />
+          <input formControlName="searchInput" class="p-rem-l-10" #projectInput matInput focused="'true'" type="text"
+            autocomplete="off" placeholder="search" (keydown)="$event.stopPropagation()" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
